<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VlineDriver</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_createand_backup_db">CreateandBackupDB</string>
    <string name="btnbackup">Backup From Database</string>
    <string name="title_activity_stagelist">Stagelist</string>
    <string name="assessment">Assessment</string>
    <string name="stage">Stage</string>
    <string name="stagedesc">Description</string>
    <string name="checklist">Checklist</string>
    <string name="checklistnum">Checklist Number</string>
    <string name="inprocess">In Process</string>
    <string name="completed">Completed</string>
    <string name="subject">Subject</string>
    <string name="total">Total</string>
    <string name="required">Required</string>
    <string name="achieved">Achieved</string>
    <string name="traineename">Trainee Name :</string>
    <string name="trainee">Trainee :</string>
    <string name="location">Location :</string>
    <string name="assessorname">Assessor Name :</string>
    <string name="employeeno">Employee No :</string>
    <string name="date">Date :</string>
    <string name="save">Save</string>
    <string name="workplace">Workplace Checklist Completed</string>
    <string name="taskdesc">Task Description</string>
    <string name="task">Task</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="na">N/A</string>
    <string name="nyc">NYC</string>
    <string name="critical">Critical</string>
    <string name="assessmentdetail">Assessment Details</string>
    <string name="overallperformance">Overall Performance</string>
    <string name="tripno">Trip No</string>
    <string name="time">Time</string>
    <string name="origin">Origin / Location</string>
    <string name="origin:">Origin:</string>
    <string name="destination">Destination</string>
    <string name="destination:">Destination:</string>
    <string name="tdno">T.D.No.</string>
    <string name="mputype">MPU Type</string>
    <string name="mpuno">MPU No</string>
    <string name="weather">Weather Conditions</string>
    <string name="mputypekey">MPU Type Key :</string>
    <string name="locomotive">L = Locomotive</string>
    <string name="vlocity">V = VLocity</string>
    <string name="sprinter">S = Sprinter</string>
    <string name="minlost">Min Lost</string>
    <string name="signal">Signals</string>
    <string name="passenger">Passenger Delays</string>
    <string name="permanent">Permanent</string>
    <string name="trackwork">Track Work</string>
    <string name="trainfault">Train Fault</string>
    <string name="timeoverschedule">Time over scheduled arrival time = </string>
    <string name="totaltimelost">Total time lost =</string>
    <string name="traineedriver">Trainee Driver total time=</string>
    <string name="timelost">Time Lost During Running</string>
    <string name="other">Other</string>
    <string name="explain">Explanation</string>
    <string name="assessmentresult">Assessment Result</string>
    <string name="competent">Competent</string>
    <string name="notcompetent">Not Competent</string>
    <string name="notyetcompetent">Not Yet Competent</string>
    <string name="assessorsig">Assessor Signature</string>
    <string name="traineesig">Trainee Signature</string>
    <string name="generalcomment">General Comments :</string>
    <string name="commentandrecommendation">Comments and Recommendations</string>
    <string name="traineedrivername">Trainee Driver :</string>
    <string name="lessonno">Lesson No :</string>
    <string name="lessontitle">Lesson Title :</string>
    <string name="objective">Objective :</string>
    <string name="conductedbytrainer">Conducted by Trainer :</string>
    <string name="trainersig">Trainer Signature</string>
    <string name="dayornight">Day/Night :</string>
    <string name="weathercondition">Weather :</string>
    <string name="locotype">Loco type/location :</string>
    <string name="from">From :</string>
    <string name="to">To :</string>
    <string name="trainlength">Train length :</string>
    <string name="tonnage">Tonnage(As appropriate) :</string>
    <string name="noofvehicle">No. of vehicles :</string>
    <string name="instruction">INSTRUCTION</string>
    <string name="guidepractice">GUIDED PRACTICE</string>
    <string name="unguidepractice">UNGUIDED PRACTICE</string>
    <string name="instructed">Instructed</string>
    <string name="ireceive">I have received the specified training</string>
    <string name="trainingcomplete">Training Completed</string>
    <string name="title_activity_assessmentof_stage">AssessmentofStage</string>
    <string name="title_activity_checklistof_stage">ChecklistofStage</string>
    <string name="title_activity_assessment_subject">AssessmentSubject</string>
    <string name="title_activity_date">Date</string>
    <string name="title_activity_subject_checklist">SubjectChecklist</string>
    <string name="title_activity_assessment_tab">AssessmentTab</string>
    <string name="title_activity_checklist_tab">ChecklistTab</string>
    <string name="title_activity_assessment_detail">AssessmentDetail</string>
    <string name="title_activity_assessment_time_lost">AssessmentTimeLost</string>
    <string name="title_activity_assessment_comment">AssessmentComment</string>
    <string name="title_activity_checklist_comment">ChecklistComment</string>
    <string name="title_activity_checklist_instruction">ChecklistInstruction</string>
    <string name="title_activity_checklist_practice">ChecklistPractice</string>
    <string name="title_activity_checklist_task">ChecklistTask</string>
    <string name="title_activity_checklist_task_tab">ChecklistTaskTab</string>
    <string name="title_activity_checklist_instructed">ChecklistInstructed</string>
    <string name="title_activity_loginactivity">Login</string>
    <string name="prompt_userid">UserID</string>
    <string name="welcome_text"><b>Welcome to V/Line Driver Training Application</b></string>
    <string name="welcome_text_gvm"><b>Welcome to Supervisor Trainee Application</b></string>
    <string name="title_activity_loginact">Loginact</string>
    <string name="username">Username : </string>
    <string name="password">Password : </string>
    <string name="upload">Upload</string>
    <string name="title_activity_uploadfile">Uploadfile</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_mainpage">Back to main page</string>
    <string name="menu_sync">Sync</string>
    <string name="menu_reset">Reset To Factory</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_settint">Setting</string>
    <string name="menu_serversetting">Server Setting</string>
    <string name="menu_aboutus">About Us</string>
    <string name="submenu_trainee">Trainee</string>
    <string name="trainer">Trainer</string>
    <string name="assessor">Assessor</string>
    <string name="assessor:">Assessor :</string>
    <string name="submenu_backup">Backup</string>
    <string name="signin">Sign in</string>
    <string name="title">V/Line Driver Training Application</string>
    <string name="abouttitle">V/Line Driver Training Application v1.6</string>
    <string name="title_gvm">Supervisor Trainee Application</string>
    <string name="title_activity_resetpopup">Resetpopup</string>
    <string name="role">Role : </string>
    <string name="fullname">Full Name : </string>
    <string name="depot">Name of Depot or Station/Yard :</string>
    <string name="corridorfrom">Corridor From :</string>
    <string name="corridorto">To :</string>
     <string name="corridordown">CORRIDOR DOWN :</string>
    <string name="corridorup">CORRIDOR UP :</string>
    <string name="up">UP </string>
    <string name="down">Down </string>
    <string name="siding">Siding :  </string>
    <string name="locomotivetype">LOCOMOTIVE TYPE :  </string>
    <string name="shutdownless">Shut down less than 8 hours </string>
    <string name="shutdownmore"> More than 8 hours</string>
    <string name="traintype"> Train type(If applicable)</string>
    <string name="fromifapp"> From (If applicable)</string>
    <string name="toifapp"> To (If applicable)</string>
    <string name="nocarriage">No. of carriages</string>
    <string name="calendar">Calendar</string>
    <string name="rpl">RPL</string>
    <string name="explained">Explained</string>
    <string name="demonstrated">Demonstrated</string>
    <string name="overallcompetency">Overall Competency</string>
    <string name="iagree">I agree with the above assessment</string>
    <string name="corporate">Corporate No :</string>
    <string name="rplmessage">If you check RPL then access to the checklist will be locked. Do you wish to proceed?</string>
    <string name="checklistlockmessage">Checklist is locked. Unlock RPL to gain access.</string>
    <string name="serversettingtitle">Name of the server URL.</string>
    <string name="serversettingdesc">This URL is used to connect application to admin site for data sync. Contact your system administrator for the correct URL.</string>
    <string name="taskactivity">Task Activities</string>
    <string name="proficiencylevel">PROFICIENCY LEVEL</string>
    <string name="overallcompetencyreport">Overall Competency Report</string>
    <string name="motivepowerunit">Motive Power Unit:</string>
    <string name="locationtdno">Location/TD NO:</string>
    <string name="savemessage">Information is saved.</string>
    <string name="mpu">MPU:</string>
    <string name="checklistdesc">The trainee must safely and satisfactorily demonstrate competency for all items below including correctly answering any supplementary questions asked by the trainer, as appropriate for the work the learner is required to perform.</string>
    <string name="title_activity_competency">Competency</string>
    <string name="title_activity_assessment10comment">Assessment10comment</string>
    <string name="title_activity_assessment10_tab">Assessment10Tab</string>
    <string name="title_activity_competencytask">Competencytask</string>
    <string name="title_activity_competencytask_tab">Competencytask_tab</string>
    <string name="title_activity_competencycomment">Competencycomment</string>
    <string name="title_activity_competency_instructed">CompetencyInstructed</string>
    <string name="dologin">You need to Log in first.</string>
    <string name="syncmessage">Sychronisation with server completed.</string>
    <string name="cantconnect">Internet connectivity failed.</string>
    <string name="title_activity_about">About</string>
    <string name="about_companyname">Global Vision Media</string>
    <string name="about_address">Address:</string>
    <string name="about_companyaddress">477 Bridge Road, Richmond, Victoria 3121, Australia </string>
    <string name="about_email">Email:</string>
    <string name="about_companyemail">info@gvmedia.com.au</string>
    <string name="about_facsimile">Phone:</string>
    <string name="about_companyfacsimile">+61 3 9412 7600</string>
    <string name="about_web">Web:</string>
    <string name="about_companyweb">http://www.globalvision.com.au</string>
    <string name="developername">Developers:</string>
    <string name="about_developer1">Farzaneh Zarei</string>
    <string name="about_developer2">Ishti Latif</string>
    <string name="about_developer3">Hasanda Fernando</string>
    <string name="performed"> Performed without trainer intervention:</string>
    <string name="timeout"> 5000</string>
	<string name="app_str_test">VlineDriver</string>
</resources>