<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
 <item android:id="@+id/item1" android:title="@string/menu_mainpage" android:showAsAction="never"></item>
 <item android:id="@+id/item2" android:title="@string/menu_settings" android:showAsAction="never">
        <menu>
            <item android:id="@+id/item3" android:title="@string/menu_sync" android:showAsAction="never"/>
            <item android:id="@+id/item4" android:title="@string/menu_serversetting" android:showAsAction="never"/>
            <item android:id="@+id/item5" android:title="@string/submenu_backup" android:showAsAction="never"/>
            <item android:id="@+id/itemreset" android:title="@string/menu_reset" android:showAsAction="never" android:visible="false"/>
            <item android:id="@+id/itemscreenshot" android:title="Take Screenshot" android:visible="false"/>
        </menu>
    </item>
 <item android:id="@+id/item7" android:title="@string/menu_aboutus" android:showAsAction="never"></item>
 <item android:id="@+id/item6" android:title="@string/menu_logout" android:showAsAction="never"></item>
 <item android:id="@+id/item8" android:title="Version" android:showAsAction="never"  android:visible="false"></item>
 
</menu>