
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/shape_background">
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        >

        <TextView
            android:id="@+id/textView10"
            style="@style/txtviewtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="500dp"
            android:layout_marginTop="20dp" />

      <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:background="#520764"
            android:gravity="center"
            android:visibility="visible" >

        <TableRow
                android:id="@+id/tableRow1"
            	style="@style/tablerowodd" 
            	android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/textView9"
                android:text="@string/lessontitle"
                style="@style/txtviewtablebig" />
            
                <TextView
                    android:id="@+id/textView1"
                    style="@style/txtviewtablebig"
                    android:layout_width="600dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="100dp" />
               
        </TableRow>
 
        <TableRow
            android:id="@+id/tableRow2"
            style="@style/tablerowodd" >

            <TextView
                android:id="@+id/textView2"
                style="@style/txtviewtablemedium"
                android:text="@string/objective" 
                android:layout_span="2"/>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            style="@style/tablerowodd" >

            <TextView
                android:id="@+id/textView3"
                style="@style/txtviewtablenormal"
                android:layout_width="700dp"
                android:layout_span="3" />

        </TableRow>

        </TableLayout>
        <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
                  
        <TableRow
            android:id="@+id/tableRow4"
            style="@style/gridheader" 
            android:layout_marginRight="40dp" 
        	android:layout_marginLeft="100dp"
        	android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/textView8"
                style="@style/gridtxthedear"
                android:layout_width="50dp"
                android:layout_marginLeft="10dp"
                android:visibility="invisible"
                android:width="300dp" />

            <TextView
                android:id="@+id/textView4"
                style="@style/gridtxthedear"
                android:layout_width="400dp"
                android:layout_marginLeft="10dp"
                android:text="@string/task"
                android:width="500dp" />

            <TextView
                android:id="@+id/textView5"
                style="@style/gridtxthedear"
                android:layout_width="200dp"
                android:layout_marginLeft="10dp"
                android:paddingLeft="10dp"
                android:text="@string/demonstrated" />

            <TextView
                android:id="@+id/textView6"
                style="@style/gridtxthedear"
                android:layout_width="150dp"
                android:layout_marginLeft="20dp"
                android:text="@string/explained"
                android:width="80dp" />

            <TextView
                android:id="@+id/textView7"
                style="@style/gridtxthedear"
                android:layout_width="200dp"
                android:layout_marginLeft="10dp"
                android:text="@string/notyetcompetent" />

        </TableRow>

        <GridView
            android:id="@+id/gridView1"
            style="@style/gridstyle"
            android:layout_height="250dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="30dp" >

        </GridView>
<TableLayout>
        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button1"
                style="@style/button"
                android:layout_width="250dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/sel_button"
                android:text="@string/save" />

        </TableRow>
</TableLayout>
    </TableLayout>
   </TableLayout>
</HorizontalScrollView>
